tests/e2e/unary_complex_6b.error
Error: syntax error in story at line 1, column 9

1|    a = not -2 or not -3 - -4
              ^^

E0122: `int` can't be converted to `boolean`
