tests/e2e/unary_complex_6b.story
a = not -2 or not -3 - -4
